    removed from Octave 5.0.

      Function             | Replacement
      ---------------------|------------------
      bitmax               | flintmax
      mahalanobis          | mahal in Octave Forge statistics pkg
      md5sum               | hash
      octave_config_info   | __octave_config_info__
      onenormest           | normest1
      sleep                | pause
      usleep               | pause
      wavread              | audioread
      wavwrite             | audiowrite

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 5.0 and will be removed from Octave 7 (or
    whatever version is the second major release after 5.0):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
                           |                         |

 ** The following properties or allowed corresponding values were
    deprecated in Octave 4.2 and have been removed from Octave 5.0:

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
      axes                 | xaxislocation           | "zero"
                           | yaxislocation           | "zero"
      hggroup              | erasemode               |
      image                | erasemode               |
      line                 | erasemode               |
      patch                | erasemode               |
      patch                | normalmode              |
      surface              | erasemode               |
      surface              | normalmode              |
      text                 | erasemode               |

 ** The C++ function is_keyword has been deprecated in favor of
    iskeyword.  The old function will be removed two versions after 5.0.

---------------------------------------------------------

See NEWS.4 for old news.