@@ -176,7 +176,11 @@ Summary of important user-visible changes for version 5.0 (yyyy-mm-dd):
 
       Object               | Property                | Value
       ---------------------|-------------------------|-------------------
-                           |                         |
+      text                 | fontangle               | "oblique"
+      uibuttongroup        | fontangle               | "oblique"
+      uicontrol            | fontangle               | "oblique"
+      uipanel              | fontangle               | "oblique"
+      uitable              | fontangle               | "oblique"
 
  ** The following properties or allowed corresponding values were
     deprecated in Octave 4.2 and have been removed from Octave 5.0:
